# migration

./: .gitignore  .travis.yml  DESCRIPTION  Makefile  README.md
R/: rcpp_hello_world.R
cpp/: CMakeLists.txt  migration.cpp  migration2.cpp  migration3.cpp  readme.txt  sim.cpp  sol.cpp
cpp/cmake_modules/: FindGSL.cmake  FindGTest.cmake  FindInterp2d.cmake
cpp/src/: BBLsim.cpp  BBLsim.h  CMakeLists.txt  CMig.cpp  CMig.h  CMig6.cpp  CMig6.h  CMig7.cpp  CMig7.h  CMig_dev1.cpp  CMig_dev1.h  CMig_dev2.cpp  CMig_dev2.h  CMig_dev3.cpp  CMig_dev3.h  cowner.cpp  cowner.h
cpp/test/: BBLtest.cpp  CMakeLists.txt  CMig6Test.cpp  CMig7Test.cpp  CMigTest.cpp  CMigTest1.cpp  CMigTestIndivid.cpp  CMigTest_D1.cpp  CMigTest_D1_ind.cpp  SolTest.cpp  cowner4Test.cpp  cowner5Test.cpp
data/: CPS_analyse.r  CPS_make.do  Makefile  PSIDmake_data.r  SIPP_analyse.r  makeSIPP.r  readme.md
inst/: empirics.Rmd  explore.Rmd  makedata.r
julia/: main.jl
julia/mods/: E_tensors.jl  copula.jl  expectations.jl  mig.jl  migtensors.json  model.jl  param.jl  plotting.jl  simulator.jl  solver.jl
julia/src/: estimation.jl  mig-incl.jl  mig.jl  model.jl  nodes.jl  param.jl  sge.jl  sge_slices.jl  simulator.jl  slices.jl  solver.jl  submit_jl.sh  submit_slices.sh
julia/test/: test_Tensors.jl  test_approx.jl  test_migincl.jl  test_model.jl  test_param.jl  test_solver.jl
lyx/: #model.lyx#  README.md  model-online.aux  model-online.lyx  model-online.tex  model.aux  model.lyx  model.tex  model_bajari.lyx  references.bib  slides-20min.lyx  slides-short.lyx  slides.lyx  slides45mins.lyx  slides_30min.lyx
man/: migration-package.Rd
mig/: REQUIRE  install.jl  main.jl  nomove.slurm  replicate-AWS.sh  replicate.sh  run.jl  run.slurm
mig-pkg/: DESCRIPTION  Makefile  NAMESPACE
mig-pkg/R/: ACS.r  BBL.r  CPS.r  PsidPrices.r  RegionalPrices.r  SippAnalyse.r  SippPrepare.r  analyze_solution.r  factorModels.r  housing_saving.r  income.r  incomeProcess-class.r  logit.r  migration-package.r  plotExperiments.r  plotjulia.R  plots.r  prices.r  sipp.r  ufun.r
mig-pkg/data/: HValue96_dynF_quarterly.RData  HValue96_dynF_yearly.RData
mig-pkg/examples/: CPS_analyse.r  estimate-incomes.r  example-blitz1.r  example-dev1.r  example-dev3H.r  example-dev5.r  example-dev6.r  example-dev7.r  example-dev8A.r  example11.r  extractSipp.r  sipp-sumstats.r
mig-pkg/inst/: EGM.r  blitz1.cpp  dev_mig.cpp  euler.r
mig-pkg/man/: Clean.Sipp.Rd  CreateBBLData.Rd  DTSetChoice.Rd  Extract.wrap.Rd  ExtractSippDB.Rd  ExtractorSippDB.Rd  IncomeProcess.Rd  InitBBLData.Rd  MergeSipp.Rd  RE.HHincome.Rd  R_ufun.Rd  Sipp.SumStats.Rd  SippProbitMove.Rd  SippSvyDesign.Rd  analyzeMedianIncome.Rd  backOutLevels.Rd  buildAggregatePrices.Rd  buildBBLData.Rd  buildDivDeviations.Rd  buildLogit.Rd  buildLogitBBL.Rd  compareAR1andAR2.Rd  divDeviations.Rd  download.FHFA.Rd  dynGrowth.Rd  dynPrices.Rd  estimate.lme.Rd  estimateDivDeviations.Rd  get.istate.Rd  getHomeValues.Rd  getIncomeM.Rd  getMovers.Rd  getREintercept.Rd  growthobj.Rd  housingModel.Rd  idiff.Rd  ipercent.Rd  lme.getCoefs.Rd  make.dummyLC.Rd  make.income.Rd  (+47 more)
mig.jl/: install.jl  main.jl  replicate-AWS.sh
mig.jl/in/: VAR_reg_small.rda  pred_p_small.rda  send.sh  sigma_agg.rda  ztable.rda
mig.jl/src/: mig.jl
mig.jl/test/: test_Tensors.jl  test_approx.jl  test_model.jl  test_param.jl  test_sim.jl  test_solver.jl
mig/in/: Gmove.csv  Gmove.json  MCtrue.csv  Makefile  PYdata.rda  PYdata_noShock.rda  VAR_agg.rda  VAR_reg.rda  agedist.rda  cop_cdf.jld2  copula.RData  distance.rda  inc_coefs2.rda  kidstrans.rda  moments.rda  par_df.rda  pred_p.rda  pred_p_noShock.rda  pred_y.rda  pred_y_noShock.rda  pred_y_small.rda  prop.rda  regP.rda  regY.rda  sigma_agg.rda  sigma_reg.rda  ztable.rda
mig/slurms/: negelast.slurm  nomove.slurm
mig/src/: mig.jl
mig/test/: runtests.jl  test_accelerator.jl  test_experiment.jl  test_model.jl  test_param.jl  test_sim.jl  test_solution.jl  test_solver.jl
migR/: .Rbuildignore  .Rhistory  DESCRIPTION  LICENSE  NAMESPACE
migR/R/: CPS.r  RegionalPrices.r  SippAnalyse.r  SippPrepare.r  migR-package.r  plotjulia.R  plots.r
migR/docs/: LICENSE-text.html  authors.html  index.html  pkgdown.yml  sitemap.xml
migR/inst/: _pkgdown.yml
migR/man/: CPS.distance.Rd  Clean.CPS.Rd  Clean.Sipp.Rd  Export.IncomeProcess.Rd  Export.Julia.Rd  Export.VAR.Rd  Extract.wrap.Rd  ExtractorSippDB.Rd  PlotSippMigrationRates.Rd  PlotSippTransitionMatrix.Rd  Sipp.SumStats.Rd  Sipp.moments.Rd  Sipp.own_in_j_rent_in_k.Rd  Sipp.wage_residual_copulas.Rd  SippProbitMove.Rd  SippSvyDesign.Rd  Var.impulse.Rd  both_prices_output.Rd  combine_BEA_fhfa.Rd  correlograms.Rd  download.FHFA.Rd  get.istate.Rd  getFHFA_realPrices.Rd  getHomeValues.Rd  getMovers.Rd  get_BEA_persincome.Rd  merge.idx.Rd  migR.Rd  multiplot.Rd  plot_moment_fit.Rd  reg_vs_state_p.Rd  reg_vs_state_y.Rd
migration-pkg/: DESCRIPTION  NAMESPACE
migration-pkg/R/: RcppExports.R  analyze_solution.r  ufun.r
migration-pkg/examples/: example-blitz2.r  example-dev10.r  example-dev2.r  example-dev2a.r  example-dev3.r  example-dev4.r  example-dev8.r  example-dev8A.r  example-dev9.r  example-devC.r  example10.r  example11.r
migration-pkg/inst/: EGM.r  empirics.Rmd  empirics.md  euler.r  makeCPS.r  makedata.r  scratch.r  (+1 more)
stata/: clogit.do
tables/: Makefile  copulas.mus  decompose.mus  elast.mus  elasticities.mus  elasticities_p.mus  elasticities_q.mus  jingit.py  mig_value.mus  mig_value2.mus  mig_value3.mus  mig_value_detail.mus  mig_value_detail2.mus  mig_value_flows.mus  mig_value_utilities.mus  moms-flows.mus  moms-housing.mus  moms-mobility.mus  moms-nontarget.mus  moms.mus  moneyMC.mus  mortgage.mus  mortgage_pres.mus  mytemp.mus  noMove.mus  noMove_region_ctax.mus  noMove_region_tau_ctax.mus  noMove_region_z_ctax.mus  ownersWTP.mus  ownersWTP2.mus  params.mus  shockRegions.mus  smallShocks_moveto.mus  smallShocks_summary.mus  tables.json  test-tables.lyx
tex/: mba-graph.tex  mba-graph2.tex  preamble.tex  slides45mins.bbl  slides45mins.blg  slides45mins.nav  slides45mins.out  slides45mins.tex  slides45mins.toc
(+160 files in other folders)
